Fix banner on iOS

--- a/css/custom.css
+++ b/css/custom.css
@@ -18,6 +18,15 @@
     td {
         width: 45%;
     }
+
+    #banner {
+        background-attachment: fixed !important;
+        background-size: cover !important;
+        -moz-background-size: cover !important;
+        -webkit-background-size: cover !important;
+        -o-background-size: cover !important;
+        background-attachment: scroll !important;
+    }
 }
 
 .services-cards {
